--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,6 +2,7 @@ FROM maven:3.6.3-jdk-11-slim
 
 RUN apt-get update && apt-get install dos2unix
 COPY . /code/
+COPY ./drivers /code/drivers
 WORKDIR /code
-RUN mvn install
+RUN mvn install -Dmaven.test.skip
 
